syntax = "proto3";

package fetch.oef.pb;

message UpdateResponse {
    enum ResponseType {
        SUCCESS = 0;
        MISSING_ADDRESS = 1;
        INVALID_ATTRIBUTE = 2;
        ERROR = 3;
    }
    ResponseType status = 1;
    string message = 2;
    string narrative = 3;
}

message SearchResponse {
    message Item {

        message AgentInfo {
            bytes key = 1;
            double score = 2;
            //later extra info about the agents (local search)
            //e.g. score (this would mean search system index dm by agent key)
        }

        bytes key = 1;
        string ip = 2;
        uint32 port = 3;
        string info = 4;
        double distance = 5;
        repeated AgentInfo agents = 6;
    }

    repeated Item result = 1;
}

message RemoveResponse {
    enum ResponseType {
        SUCCESS = 0;
        NOT_FOUND = 1;
        ERROR = 2;
    }
    ResponseType status = 1;
    string message = 2;
    string narrative = 3;
}
